--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>NU HomeStudio</title>
 
     <!-- All In One SEO Pack 3.6.2[648,660] -->
-    <meta name="description" content="Découvrez le concept Mugs, Cantine Hype au coeur de Saint-raphaël. Ici tout est fait maison, idéal pour vos brunchs &amp; after works. Let&#039;s go…" />
+    <meta name="description" content="" />
 
     <meta name="keywords" content="restaurant, brunch, cantine, manger, saint Raphaël, cote d\'azur, burger" />
 
